--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -22,7 +22,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="@dimen/input_find_city_weather_padding"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:theme="@style/AppTheme.Toolbar">
 
@@ -31,9 +31,9 @@
                 style="@style/SearchViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="@dimen/input_find_city_weather_margin_start"
+                android:layout_marginTop="@dimen/input_find_city_weather_margin_top"
+                android:layout_marginEnd="@dimen/input_find_city_weather_margin_end"
                 android:hint="@string/search_city_weather"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -47,9 +47,9 @@
         style="@style/TextViewHeaderStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="@dimen/text_label_search_for_city_mmargin_top"
         android:text="@string/search_for_a_city"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_label_search_for_city_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />
@@ -57,8 +57,8 @@
     <ImageView
         android:id="@+id/image_city"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="64dp"
+        android:layout_height="@dimen/image_city_height"
+        android:layout_marginTop="@dimen/image_city_margin_top"
         android:scaleType="centerCrop"
         android:src="@drawable/city_bg"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,13 +78,13 @@
             android:id="@+id/constraint_layout_showing_temp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="@dimen/constraint_layout_showing_temp_padding"
             android:visibility="gone">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view_searched_city_temperature"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="@dimen/recycler_view_searched_city_temperature_height"
                 android:fadeScrollbars="false"
                 android:scrollbars="horizontal"
                 android:visibility="gone"
@@ -94,8 +94,8 @@
 
             <ImageView
                 android:id="@+id/image_weather_symbol"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="@dimen/image_weather_symbol_width"
+                android:layout_height="@dimen/image_weather_symbol_height"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_sunny"
                 app:layout_constraintBottom_toBottomOf="@+id/text_todays_date"
@@ -107,10 +107,10 @@
                 style="@style/TextViewHeaderStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="@dimen/text_label_today_margin_start"
+                android:layout_marginTop="@dimen/text_label_today_mmargin_top"
                 android:text="@string/today"
-                android:textSize="24sp"
+                android:textSize="@dimen/text_label_today_text_size"
                 app:layout_constraintStart_toEndOf="@+id/image_weather_symbol"
                 app:layout_constraintTop_toBottomOf="@+id/recycler_view_searched_city_temperature" />
 
@@ -119,8 +119,8 @@
                 style="@style/TextViewNormalStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:textSize="14sp"
+                android:layout_marginTop="@dimen/text_todays_date_margin_top"
+                android:textSize="@dimen/text_todays_date_text_size"
                 app:layout_constraintStart_toStartOf="@+id/text_label_today"
                 app:layout_constraintTop_toBottomOf="@+id/text_label_today"
                 tools:text="Fri, 7 Sep" />
@@ -130,8 +130,8 @@
                 style="@style/TextViewNormalStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:textSize="14sp"
+                android:layout_marginTop="@dimen/weather_description_margin_top"
+                android:textSize="@dimen/weather_description_text_size"
                 app:layout_constraintStart_toStartOf="@+id/text_todays_date"
                 app:layout_constraintTop_toBottomOf="@+id/text_todays_date"
                 tools:text="Partly Cloudy" />
@@ -141,8 +141,8 @@
                 style="@style/TextViewNormalStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:textSize="14sp"
+                android:layout_marginTop="@dimen/wind_info_margin_top"
+                android:textSize="@dimen/wind_info_text_size"
                 app:layout_constraintStart_toStartOf="@+id/weather_description"
                 app:layout_constraintTop_toBottomOf="@+id/weather_description"
                 tools:text="Wind: 13 km/h" />
@@ -152,8 +152,8 @@
                 style="@style/TextViewHeaderStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="54dp"
-                android:textSize="84sp"
+                android:layout_marginTop="@dimen/text_temperature_margin_top"
+                android:textSize="@dimen/text_temperature_text_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_todays_date"
@@ -164,9 +164,9 @@
                 style="@style/TextViewBodyStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="\u2103"
-                android:textSize="20sp"
+                android:layout_marginTop="@dimen/text_label_degree_margin_top"
+                android:text="@string/text_label_degree"
+                android:textSize="@dimen/text_label_degree_text_size"
                 app:layout_constraintStart_toEndOf="@+id/text_temperature"
                 app:layout_constraintTop_toTopOf="@+id/text_temperature" />
 
@@ -175,8 +175,8 @@
                 style="@style/TextViewBodyStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="18sp"
+                android:layout_marginTop="@dimen/text_city_name_margin_top"
+                android:textSize="@dimen/text_city_name_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_temperature"
@@ -186,7 +186,7 @@
                 android:id="@+id/user_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="@dimen/user_info_margin_top"
                 android:src="@drawable/ic_baseline_info_24"
                 app:layout_constraintBottom_toTopOf="@+id/image_weather_human_reaction"
                 app:layout_constraintHorizontal_bias="1"
