--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,44 @@
     <dimen name="image_weather_symbol_dimen">33dp</dimen>
     <dimen name="text_date_time_top_margin">2dp</dimen>
     <dimen name="image_weather_human_reaction_height">300dp</dimen>
+    <dimen name="zerosize">0dp</dimen>
+    <dimen name="text_temperature_size">22sp</dimen>
+    <dimen name="text_label_degree_size">12sp</dimen>
+    <dimen name="text_wind_value_size">10sp</dimen>
+    <dimen name="text_day_type_width">70dp</dimen>
+    <dimen name="text_day_type_margin_start">8dp</dimen>
+    <dimen name="text_day_type_size">16sp</dimen>
+    <dimen name="text_temperature_margin_start">10dp</dimen>
+    <dimen name="forecase_item_marin">8dp</dimen>
+    <dimen name="forecast_item_padding">8dp</dimen>
+    <dimen name="text_wind_value_width">0dp</dimen>
+    <dimen name="textview_second_size">22sp</dimen>
+    <dimen name="user_info_margin_top">5dp</dimen>
+    <dimen name="text_city_name_size">18sp</dimen>
+    <dimen name="text_city_name_margin_top">16dp</dimen>
+    <dimen name="text_label_degree_text_size">20sp</dimen>
+    <dimen name="text_label_degree_margin_top">16dp</dimen>
+    <dimen name="text_temperature_margin_top">54dp</dimen>
+    <dimen name="text_temperature_text_size">84sp</dimen>
+    <dimen name="wind_info_margin_top">4dp</dimen>
+    <dimen name="wind_info_text_size">14sp</dimen>
+    <dimen name="weather_description_margin_top">4dp</dimen>
+    <dimen name="weather_description_text_size">14sp</dimen>
+    <dimen name="text_todays_date_margin_top">4dp</dimen>
+    <dimen name="text_todays_date_text_size">14sp</dimen>
+    <dimen name="text_label_today_text_size">24sp</dimen>
+    <dimen name="text_label_today_mmargin_top">24dp</dimen>
+    <dimen name="text_label_today_margin_start">8dp</dimen>
+    <dimen name="image_weather_symbol_width">64dp</dimen>
+    <dimen name="image_weather_symbol_height">64dp</dimen>
+    <dimen name="recycler_view_searched_city_temperature_height">0dp</dimen>
+    <dimen name="constraint_layout_showing_temp_padding">10dp</dimen>
+    <dimen name="image_city_margin_top">64dp</dimen>
+    <dimen name="image_city_height">0dp</dimen>
+    <dimen name="text_label_search_for_city_mmargin_top">64dp</dimen>
+    <dimen name="text_label_search_for_city_text_size">20sp</dimen>
+    <dimen name="input_find_city_weather_margin_start">8dp</dimen>
+    <dimen name="input_find_city_weather_margin_top">8dp</dimen>
+    <dimen name="input_find_city_weather_margin_end">8dp</dimen>
+    <dimen name="input_find_city_weather_padding">10dp</dimen>
 </resources>
