--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,4 +44,8 @@
     <dimen name="input_find_city_weather_margin_top">8dp</dimen>
     <dimen name="input_find_city_weather_margin_end">8dp</dimen>
     <dimen name="input_find_city_weather_padding">10dp</dimen>
+    <dimen name="progress_dialog_width">200dp</dimen>
+    <dimen name="progress_dialog_height">200dp</dimen>
+    <dimen name="progress_bar_width">40dp</dimen>
+    <dimen name="progress_bar_height">40dp</dimen>
 </resources>
